--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "daemon:stop": "tsx src/cli.ts daemon stop"
   },
   "dependencies": {
+    "winston": "^3.11.0",
     "@anthropic-ai/claude-agent-sdk": "^0.2.12",
     "@openai/codex-sdk": "^0.91.0",
     "@hono/node-server": "^1.13.0",
