--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "@anthropic-ai/claude-agent-sdk": "^0.2.12",
+    "@clack/prompts": "^0.7.0",
     "@hono/node-server": "^1.13.0",
     "@hono/node-ws": "^1.0.0",
     "@openai/codex-sdk": "^0.91.0",
     "hono": "^4.6.0",
     "hyperswarm": "^4.16.0",
+    "picocolors": "^1.0.0",
     "winston": "^3.19.0",
     "ws": "^8.19.0"
   },
